--- a/Archivists' App/Tests/SoundExplorers.Tests.csproj
+++ b/Archivists' App/Tests/SoundExplorers.Tests.csproj
@@ -5,6 +5,7 @@
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <RootNamespace>SoundExplorers.Tests</RootNamespace>
     <AssemblyName>SoundExplorers.Tests</AssemblyName>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
