--- a/Archivists' App/SoundExplorers/SoundExplorers.csproj
+++ b/Archivists' App/SoundExplorers/SoundExplorers.csproj
@@ -7,6 +7,7 @@
         <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 		<RootNamespace>SoundExplorers</RootNamespace>
 		<AssemblyName>SoundExplorers</AssemblyName>
+		<Nullable>enable</Nullable>
     </PropertyGroup>
     <PropertyGroup>
         <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs.4
