--- a/Archivists' App/Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/Controller/SoundExplorers.Controller.csproj
@@ -5,6 +5,7 @@
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <RootNamespace>SoundExplorers.Controller</RootNamespace>
     <AssemblyName>SoundExplorers.Controller</AssemblyName>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
