--- a/Archivists' App/Data/SoundExplorers.Data.csproj
+++ b/Archivists' App/Data/SoundExplorers.Data.csproj
@@ -34,4 +34,7 @@
       <Version>9.1.2</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\SoundExplorers.Common.csproj" />
+  </ItemGroup>
 </Project>
