--- a/Archivists' App/Controller/SoundExplorers.Controller.csproj
+++ b/Archivists' App/Controller/SoundExplorers.Controller.csproj
@@ -27,5 +27,8 @@
     <PackageReference Include="JetBrains.Annotations">
       <Version>2020.1.0</Version>
     </PackageReference>
+    <PackageReference Include="JetBrains.Profiler.Api">
+      <Version>1.1.7</Version>
+    </PackageReference>
   </ItemGroup>
 </Project>
