--- a/Common/SoundExplorers.Common.csproj
+++ b/Common/SoundExplorers.Common.csproj
@@ -5,6 +5,8 @@
         <Nullable>enable</Nullable>
         <AssemblyName>SoundExplorers.Common</AssemblyName>
         <RootNamespace>SoundExplorers.Common</RootNamespace>
+        <Configurations>Release;Debug</Configurations>
+        <Platforms>X64;x64</Platforms>
     </PropertyGroup>
 
 </Project>
