--- a/Controller/SoundExplorers.Controller.csproj
+++ b/Controller/SoundExplorers.Controller.csproj
@@ -6,6 +6,8 @@
     <RootNamespace>SoundExplorers.Controller</RootNamespace>
     <AssemblyName>SoundExplorers.Controller</AssemblyName>
     <Nullable>enable</Nullable>
+    <Configurations>Release;Debug</Configurations>
+    <Platforms>X64;x64</Platforms>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
