--- a/Model/SoundExplorers.Model.csproj
+++ b/Model/SoundExplorers.Model.csproj
@@ -6,6 +6,8 @@
     <RootNamespace>SoundExplorers.Model</RootNamespace>
     <AssemblyName>SoundExplorers.Model</AssemblyName>
     <Nullable>enable</Nullable>
+    <Configurations>Release;Debug</Configurations>
+    <Platforms>X64;x64</Platforms>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
