--- a/SoundExplorers/SoundExplorers.csproj
+++ b/SoundExplorers/SoundExplorers.csproj
@@ -8,6 +8,8 @@
 		<RootNamespace>SoundExplorers</RootNamespace>
 		<AssemblyName>SoundExplorers</AssemblyName>
 		<Nullable>enable</Nullable>
+		<Configurations>Release;Debug</Configurations>
+		<Platforms>X64;x64</Platforms>
     </PropertyGroup>
     <PropertyGroup>
         <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs.4
