--- a/Tests/SoundExplorers.Tests.csproj
+++ b/Tests/SoundExplorers.Tests.csproj
@@ -6,6 +6,8 @@
     <RootNamespace>SoundExplorers.Tests</RootNamespace>
     <AssemblyName>SoundExplorers.Tests</AssemblyName>
     <Nullable>enable</Nullable>
+    <Configurations>Release;Debug</Configurations>
+    <Platforms>X64;x64</Platforms>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
