--- a/Model/SoundExplorers.Model.csproj
+++ b/Model/SoundExplorers.Model.csproj
@@ -7,7 +7,7 @@
     <AssemblyName>SoundExplorers.Model</AssemblyName>
     <Nullable>enable</Nullable>
     <Configurations>Release;Debug</Configurations>
-    <Platforms>X64;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
