--- a/View/SoundExplorers.View.csproj
+++ b/View/SoundExplorers.View.csproj
@@ -8,7 +8,7 @@
     <AssemblyName>SoundExplorers.View</AssemblyName>
     <Nullable>enable</Nullable>
     <Configurations>Release;Debug</Configurations>
-    <Platforms>X64;x64</Platforms>
+    <Platforms>x64</Platforms>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
