--- a/SoundExplorers/SoundExplorers.csproj
+++ b/SoundExplorers/SoundExplorers.csproj
@@ -10,7 +10,7 @@
 		<Nullable>enable</Nullable>
 		<Configurations>Release;Debug</Configurations>
 		<Platforms>x64</Platforms>
-        <ApplicationIcon>Grand Piano.ico</ApplicationIcon>
+        <ApplicationIcon>Kettle Drum (multi-size).ico</ApplicationIcon>
     </PropertyGroup>
     <PropertyGroup>
         <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs.4
