--- a/Common/SoundExplorers.Common.csproj
+++ b/Common/SoundExplorers.Common.csproj
@@ -8,5 +8,13 @@
         <Configurations>Release;Debug</Configurations>
         <Platforms>x64</Platforms>
     </PropertyGroup>
-
+    <PropertyGroup>
+        <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
+        <Title>Sound Explorers Audio Archive (Common Library)</Title>
+        <Company>Sound and Light Exploration Society</Company>
+        <Product>Sound Explorers Audio Archive</Product>
+        <Copyright>Copyright © 2021 Sound and Light Exploration Society</Copyright>
+        <AssemblyVersion>2021.1.0</AssemblyVersion>
+        <FileVersion>2021.1.0</FileVersion>
+    </PropertyGroup>
 </Project>
