--- a/Source/Model/SoundExplorers.Model.csproj
+++ b/Source/Model/SoundExplorers.Model.csproj
@@ -31,6 +31,9 @@
     <PackageReference Include="JetBrains.Annotations">
       <Version>2021.1.0</Version>
     </PackageReference>
+    <PackageReference Include="SharpZipLib">
+      <Version>1.3.1</Version>
+    </PackageReference>
     <PackageReference Include="VelocityDB">
       <Version>10.2.0</Version>
     </PackageReference>
