--- a/Source/View/SoundExplorers.View.csproj
+++ b/Source/View/SoundExplorers.View.csproj
@@ -40,5 +40,8 @@
     <PackageReference Include="JetBrains.Profiler.Api">
       <Version>1.1.7</Version>
     </PackageReference>
+    <PackageReference Include="WindowsAPICodePack-Shell">
+      <Version>1.1.1</Version>
+    </PackageReference>
   </ItemGroup>
 </Project>
