--- a/Source/Common/SoundExplorers.Common.csproj
+++ b/Source/Common/SoundExplorers.Common.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <AssemblyName>SoundExplorers.Common</AssemblyName>
         <RootNamespace>SoundExplorers.Common</RootNamespace>
         <Configurations>Release;Debug</Configurations>
         <Platforms>x64</Platforms>
+        <LangVersion>10</LangVersion>
     </PropertyGroup>
     <PropertyGroup>
         <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
