--- a/Source/View/SoundExplorers.View.csproj
+++ b/Source/View/SoundExplorers.View.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <RootNamespace>SoundExplorers.View</RootNamespace>
@@ -9,6 +9,7 @@
     <Nullable>enable</Nullable>
     <Configurations>Release;Debug</Configurations>
     <Platforms>x64</Platforms>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Assembly properties. Before .Net 5, these were coded in AssemblyInfo.cs. -->
