--- a/Source/Common/SoundExplorers.Common.csproj
+++ b/Source/Common/SoundExplorers.Common.csproj
@@ -14,8 +14,8 @@
         <Title>Sound Explorers Audio Archive (Common Library)</Title>
         <Company>Sound and Light Exploration Society</Company>
         <Product>Sound Explorers Audio Archive</Product>
-        <Copyright>Copyright © 2021 Sound and Light Exploration Society</Copyright>
-        <AssemblyVersion>1.0.1</AssemblyVersion>
-        <FileVersion>1.0.1</FileVersion>
+        <Copyright>Copyright © 2021-22 Sound and Light Exploration Society</Copyright>
+        <AssemblyVersion>1.0.2</AssemblyVersion>
+        <FileVersion>1.0.2</FileVersion>
     </PropertyGroup>
 </Project>
