--- a/Source/SoundExplorers/SoundExplorers.csproj
+++ b/Source/SoundExplorers/SoundExplorers.csproj
@@ -22,13 +22,13 @@
         <Title>Sound Explorers Audio Archive</Title>
         <Company>Sound and Light Exploration Society</Company>
         <Product>Sound Explorers Audio Archive</Product>
-        <Copyright>Copyright © 2021 Sound and Light Exploration Society</Copyright>
+        <Copyright>Copyright © 2021-22 Sound and Light Exploration Society</Copyright>
         <!-- In .Net 5, Application.ProductVersion comes from the InformationalVersion
         assembly property, not the ProductVersion property. -->
-        <InformationalVersion>1.0.1</InformationalVersion>
-        <ProductVersion>1.0.1</ProductVersion>
-        <AssemblyVersion>1.0.1</AssemblyVersion>
-        <FileVersion>1.0.1</FileVersion>
+        <InformationalVersion>1.0.2</InformationalVersion>
+        <ProductVersion>1.0.2</ProductVersion>
+        <AssemblyVersion>1.0.2</AssemblyVersion>
+        <FileVersion>1.0.2</FileVersion>
     </PropertyGroup>
     <ItemGroup>
       <ProjectReference Include="..\View\SoundExplorers.View.csproj" />
